Remove `UserDB` implementation; migrate dependency and salt configurations; refactor controller validation logic; switch password hashing to Argon2